--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Proyectos de Investigació</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -21,7 +22,7 @@
                 </div>
                 <div class="caja_fondo-registro">
                     <h3>¿Aún no tienes una cuenta?</h3>
-                    <p>Registate para iniciar sesion</p>
+                    <p>Registrate para iniciar sesion</p>
                     <button id="btn_registrar">Registarse</button>
                 </div>
             </div>
